modified experiment and added simple iterator

--- a/Mineria/computer-vision-data-loader/experiment.ipynb
+++ b/Mineria/computer-vision-data-loader/experiment.ipynb
@@ -5,28 +5,78 @@
    "id": "e399a67b",
    "metadata": {},
    "source": [
-    "## Basic Example\n",
+    "## Ejecucion\n",
     "\n",
-    "Here we just want to check whether our data loader works as expected."
+    "Prueba de importación del data loader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6cccdb4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys, os, pathlib\n",
+    "sys.path.append(os.path.abspath(\"src\"))\n",
+    "from src.loader import main"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cccdb4b",
+   "id": "45e918d4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start as the Python Environment 'Python 3.13.7' is no longer available. Consider selecting another kernel or refreshing the list of Python Environments."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se encontraron 6 archivos CSV en data\n"
      ]
     }
    ],
    "source": [
-    "from src.loader import main"
+    "import glob\n",
+    "import os\n",
+    "from src.utils import ensure_dir\n",
+    "data_dir = 'data'\n",
+    "csv_files = glob.glob(os.path.join(data_dir, '*.csv'))\n",
+    "print(f'Se encontraron {len(csv_files)} archivos CSV en {data_dir}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95cc6c03",
+   "metadata": {},
+   "source": [
+    "## Ejecución del iterador básico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fce991e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mStopIteration\u001b[39m                             Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m output_dir = \u001b[33m'\u001b[39m\u001b[33moutput/iterator/pokemons\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m      3\u001b[39m ensure_dir(output_dir)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m row = \u001b[43mproduce\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcsv_files\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutput_dir\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32md:\\Universidad\\MsC\\Mineria\\EAFIT_MsC_DataScience\\Mineria\\computer-vision-data-loader\\src\\iterator.py:34\u001b[39m, in \u001b[36mproduce\u001b[39m\u001b[34m(csvs, output_dir)\u001b[39m\n\u001b[32m     32\u001b[39m iterator = rows_from_csv(csvs, output_dir)\n\u001b[32m     33\u001b[39m t0 = time.perf_counter()\n\u001b[32m---> \u001b[39m\u001b[32m34\u001b[39m row = \u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43miterator\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     35\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mLa operación tómo \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtime.perf_counter()\u001b[38;5;250m \u001b[39m-\u001b[38;5;250m \u001b[39mt0\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.5f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33ms\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     36\u001b[39m plt.imshow(row.image)\n",
+      "\u001b[31mStopIteration\u001b[39m: "
+     ]
+    }
+   ],
+   "source": [
+    "from src.iterator import produce\n",
+    "output_dir = 'output/iterator/pokemons'\n",
+    "ensure_dir(output_dir)\n",
+    "row = produce(csv_files, output_dir)"
    ]
   },
   {
