modified iterator & experiment

--- a/Mineria/computer-vision-data-loader/experiment.ipynb
+++ b/Mineria/computer-vision-data-loader/experiment.ipynb
@@ -63,7 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23:43:26: Iterador básico: imagen (bulbasaur) cargada en 0.00865s\n"
+      "00:03:42: Iterador básico: imagen (bulbasaur) cargada en 0.00653s\n"
      ]
     },
     {
@@ -102,7 +102,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23:43:44: Productor-Consumidor: imagen (bulbasaur) cargada en 0.00051s\n"
+      "00:03:48: Productor-Consumidor: imagen (bulbasaur) cargada en 0.00059s\n"
      ]
     },
     {
@@ -118,32 +118,31 @@
    ],
    "source": [
     "from src.iterator import test_pipeline\n",
-    "test_pipeline(csv_files, output_dir)"
+    "test_pipeline(csv_files, output_dir) # Se queda cargando infinitamente"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "22eef400",
+   "id": "ddec63f6",
    "metadata": {},
    "source": [
-    "## Most performant case\n",
+    "# Evaluacion del desempeño\n",
+    "1-\n",
+    "Almacenar el tiempo que se tarda cargando cada imagen del iterador en cola\n",
     "\n",
-    "Write here different attempts to improve the performance of the data loader, so that the memory usage and the time to produce an image is very low. Consider that:\n",
-    "* You can report many attemps; show the effect of playing with the `threading`, `asyncio` and `multiprocessing` modules.\n",
-    "* You can report your results in any way you consider relevant.\n",
-    "* You can even use a different `load` function, one that you think it is more appropiate to maximize performance. "
+    "Almacenar el tiempo que se tarda el iterador basico para cargar cada imagen\n",
+    "\n",
+    "2-\n",
+    "**Calcular estadísticas de los tiempos**: media, mediana, desviacion estandar y graficar barras para cada método\n",
+    "\n",
+    "3- **Extra**\n",
+    "Jugar con maxsize de pipeline = queue.Queue(maxsize=20), probar 5 configuraciones diferentes (5,10,20,30,50) y comparar el tiempo total tardado con cada configuracion\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3b8d8a0a",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b4051a6-65d5-4d37-89df-3ce4ab03adc1",
+   "id": "962f7f98",
    "metadata": {},
    "outputs": [],
    "source": []
